# saas

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Makefile  README.md  audit.toml  blueprint.md  justfile  typos.toml
.github/workflows/: ci.yaml
crates/api-gateway/: Cargo.toml
crates/api-gateway/src/: auth_proxy.rs  config.rs  main.rs  telemetry.rs
crates/api-gateway/src/routes/: auth.rs  mod.rs  tenants.rs
crates/auth-service/: Cargo.toml
crates/auth-service/src/: handlers.rs  main.rs  models.rs  repository.rs  service.rs
crates/auth-service/tests/: auth_flow.rs
crates/auth-service/tests/common/: mod.rs
crates/auth-service/tests/fixtures/: mod.rs
crates/db-migrator/: Cargo.toml
crates/db-migrator/src/: config.rs  main.rs
crates/feature-service/: Cargo.toml
crates/feature-service/src/: handlers.rs  main.rs  models.rs  repository.rs  service.rs
crates/shared/: Cargo.toml
crates/shared/src/: auth.rs  config.rs  error.rs  lib.rs  telemetry.rs
crates/shared/src/db/: migration.rs  mod.rs
crates/shared/src/middleware/: audit.rs  auth.rs  mod.rs  quota.rs  rate_limit.rs  tenant.rs
crates/shared/src/tenant/: context.rs  mod.rs  router.rs
crates/shared/tests/: auth_integration.rs
crates/sqlx-shim/: Cargo.toml
crates/sqlx-shim/src/: lib.rs
crates/tenant-service/: Cargo.toml
crates/tenant-service/src/: handlers.rs  main.rs  models.rs  quota.rs  repository.rs  service.rs
crates/tenant-service/tests/: schema_isolation.rs  tenant_crud.rs
crates/tenant-service/tests/common/: mod.rs
deploy/k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  secret.yaml
deploy/k8s/overlays/local/: kustomization.yaml
deploy/k8s/overlays/production/: kustomization.yaml
docs/: TECH_DEBT.md  architecture.md  database-migrations.md  deployment-guide.md  security.md  tenant-isolation.md
infrastructure/local/: docker-compose.yaml
infrastructure/terraform/: eks.tf  main.tf  rds.tf  vpc.tf
migrations/: 20240301000000_initial.sql  20260310161830_feature_flags.sql  20260310162843_tenant_usage.sql  LATEST_VERSION
scripts/: check-migration-version.sh  k3s-setup.sh  setup.sh
