[workspace]
resolver = "2"
members = [
    "crates/api-gateway",
    "crates/auth-service",
    "crates/tenant-service",
    "crates/shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["ERP SaaS Team"]
license = "MIT"

[workspace.dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros", "tower-log"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full", "limit", "request-id"] }
hyper = { version = "1.0", features = ["full"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "time", "json", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Authentication
jsonwebtoken = "9.0"
argon2 = "0.5"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
prometheus = "0.13"

# OpenTelemetry
opentelemetry = { version = "0.27", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.27", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
tracing-opentelemetry = "0.28"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# AWS SDK
aws-sdk-s3 = "1.0"
aws-sdk-sqs = "1.0"
aws-sdk-secretsmanager = "1.0"
aws-config = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
time = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1.10"
async-trait = "0.1"
futures = "0.3"
dashmap = "6.0"

# NATS
async-nats = "0.46"

# OpenAPI
utoipa = { version = "5.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3
