[workspace]
resolver = "2"
members = [
    "crates/api-gateway",
    "crates/auth-service",
    "crates/tenant-service",
    "crates/shared",
    "crates/sqlx-shim",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["ERP SaaS Team"]
license = "MIT"

[workspace.dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros", "tower-log"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full", "limit", "request-id"] }
hyper = { version = "1.0", features = ["full"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Database
sqlx = { path = "crates/sqlx-shim" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Authentication
jsonwebtoken = { version = "10.3", default-features = false, features = ["use_pem", "aws_lc_rs"] }
argon2 = "0.5"
rsa = "0.9"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
prometheus = { version = "0.14", default-features = false }

# OpenTelemetry
opentelemetry = { version = "0.27", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.27", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
tracing-opentelemetry = "0.28"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# AWS SDK
aws-sdk-s3 = "1.0"
aws-sdk-sqs = "1.0"
aws-sdk-secretsmanager = "1.0"
aws-config = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
time = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1.10"
async-trait = "0.1"
futures = "0.3"
dashmap = "6.0"
http = "1.0"
sha2 = "0.10"

# NATS
async-nats = "0.46"

# OpenAPI
utoipa = { version = "5.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Testing
tokio-test = "0.4"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "redis"] }
wiremock = "0.6"
fake = { version = "4.0", features = ["derive"] }
proptest = "1.5"
assert_matches = "1.5"
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3
