[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
tokio.workspace = true
tokio-util.workspace = true

serde.workspace = true
serde_json.workspace = true

sqlx.workspace = true
redis.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

config.workspace = true
dotenvy.workspace = true

thiserror.workspace = true
anyhow.workspace = true

uuid.workspace = true
chrono.workspace = true

utoipa.workspace = true
utoipa-swagger-ui.workspace = true

prometheus.workspace = true

opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
tokio-test.workspace = true
