[package]
name = "auth-service"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
shared = { path = "../shared" }

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
time.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
config.workspace = true

argon2.workspace = true
jsonwebtoken.workspace = true
redis.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio-test.workspace = true
