[package]
name = "db-migrator"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
shared = { path = "../shared" }

anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
config.workspace = true
serde.workspace = true
