[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
dashmap.workspace = true
config.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
tokio-test.workspace = true
proptest.workspace = true
assert_matches.workspace = true
pretty_assertions.workspace = true
rand.workspace = true
rsa.workspace = true
